# pico_atecc

./: CMakeLists.txt  LICENSE  README.md
libraries/atecc/: CMakeLists.txt
libraries/atecc/src/: atecc_cmd.c  atecc_cmd.h  atecc_crc.c  atecc_crc.h  hal_pico_i2c.c  hal_pico_i2c.h
scripts/: install-pico-sdk.sh
src/: atecc_crc.c  pico_atecc.c  pico_atecc.h
